kubernetes/bg-search-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bg-search
spec:
  selector:
    matchLabels:
      app: bg-search
  template:
    metadata:
      labels:
        app: bg-search
    spec:
      containers:
        - name: default
          image: ghcr.io/nafarlee/bg-search:ac823e472ec9a8f0a39ba3bddec34e008da5404b
          ports:
            - containerPort: 8080
