kubernetes/database-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 22Gi
  template:
    metadata:
      labels:
        app: database
    spec:
      terminationGracePeriodSeconds: 15
      volumes:
        - name: db-init-volume
          configMap:
            name: db-init
      containers:
        - name: default
          image: postgres:18.0-alpine3.22
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 6m
              memory: 92274688
          volumeMounts:
            - name: db-init-volume
              mountPath: /docker-entrypoint-initdb.d
            - name: storage
              mountPath: /var/lib/postgresql
