kubernetes/mirror-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mirror
spec:
  selector:
    matchLabels:
      app: mirror
  template:
    metadata:
      labels:
        app: mirror
    spec:
      containers:
        - name: default
          image: ghcr.io/nafarlee/s3-hotlink-cache:f6faaa27507e12744b01a37f0dca6b235489f7ed
          ports:
            - containerPort: 8080
