kubernetes/pull-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pull
spec:
  selector:
    matchLabels:
      app: pull
  template:
    metadata:
      labels:
        app: pull
        type: cron
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: default
          image: ghcr.io/nafarlee/bg-search-pull-games:8a7ee77f6f302607570c89eb4d97814a853395b9
