kubernetes/pull-plays-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pull-plays
spec:
  selector:
    matchLabels:
      app: pull-plays
  template:
    metadata:
      labels:
        app: pull-plays
        type: cron
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: default
          image: ghcr.io/nafarlee/bg-search-pull-plays:d88cf31270c2d4e22186e7017a63005d771cccb0
