kubernetes/database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - port: 5432
